fix: resolve all 45 SonarQube issues
- BLOCKER: Add assertions to all empty test cases (S2699)
- CRITICAL: Extract string literal constants in InventoryExceptionHandler (S1192)
- CRITICAL: Fix empty method bodies in StockCheckResponse DTO (S1186)
- MAJOR: Replace Collectors.toList() with .toList() in OrderService (S6204)
- MAJOR: Extract 'Product not found' constant in InventoryService (S1192)
- MAJOR: Fix NullPointerException risk in api-gateway GlobalErrorHandler (S2259)
- MAJOR: Fix generic RuntimeException throws in GlobalErrorHandler (S112)
- MAJOR: Fix unused fields in StockChangeLog (S1068/S1450)
- MINOR: Remove unused imports in api-gateway GlobalErrorHandler (S1128)
- MINOR: Replace lambda with method reference CsrfSpec::disable in SecurityConfig (S1612)
- MINOR: Inject JwtAuthenticationFilter directly in SecurityConfig (S3305)
- TEST: Fix assertEquals usage in JwtAuthenticationTest (S5785)
- TEST: Refactor lambda in StockReservationTest to single throwing invocation (S5778)